# cactus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  meson.build
ProjetPGAI/: ProjetPGAI.pro  ProjetPGAI.pro.user.a26c7d8  imports.qml  mainwindow.cpp  mainwindow.h  objwindow.cpp
shader/: color.gs  color.vs
src/: CMakeLists.txt  main.cpp  meson.build
src/core/: CMakeLists.txt  diedre_stats.h  droite.cpp  droite.h  equilateral_metric.h  mesh.cpp  mesh.h  meshutilities.cpp  meshutilities.h  meson.build  stats_utils.h  valence.cpp  valence.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  meson.build  modelvisu.cpp  modelvisu.h  modelwidget.cpp  modelwidget.h  objwindow.h
src/gui/ui/: mainwindow.ui
src/render/: CMakeLists.txt  meshnode-internals.hpp  meshnode.cpp  meshnode.h  meson.build  shader.cpp
tests/: CMakeLists.txt  meson.build
tests/cube_utils/: CMakeLists.txt  cube.h  meson.build
tests/test-diedre-stats/: CMakeLists.txt  main.cpp  meson.build  test_diedre_stats.cpp
tests/test-equilateral-stats/: CMakeLists.txt  meson.build  test_equilateral_stats.cpp
tests/test-meshutilities/: CMakeLists.txt  cube.cpp  main.cpp  meson.build  test_meshutilities.cpp
tests/test-stats-utils/: CMakeLists.txt  meson.build  test_stats-utils.cpp
tools/: histogram.py  histogram_diedre.py  histogram_equilateral.py  histogram_valence.py
