diedreStatsTest = executable('test-diedre-stats',
                               ['main.cpp',
                                'test_diedre_stats.cpp'
                               ],
                dependencies: [gtest_dep, gmock_dep, cactus_core_dep, cube_utils_dep])

test('test-diedre-stats', diedreStatsTest)
