equilateralStatsTest = executable('test-equilateral-stats',
                               ['main.cpp',
                                'test_equilateral_stats.cpp'
                               ],
                dependencies: [gtest_dep, gmock_dep, cactus_core_dep, cube_utils_dep])

test('test-equilateral-stats', equilateralStatsTest)
