meshutilitiesTest = executable('test-meshutilites',
                               ['main.cpp',
                                'cube.h',
                                'cube.cpp',
                                'test_meshutilities.cpp'
                               ],
                dependencies: [gtest_dep, gmock_dep, cactus_core_dep])

test('test-meshutilities', meshutilitiesTest)
